--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty
 
 os:
   - linux
-#  - osx
+  - osx
 
 haxe:
   - "3.2.1"
@@ -18,6 +18,7 @@ branches:
 matrix:
   allow_failures:
     - haxe: development
+    - os: osx
 
 install:
   - haxelib dev hxmake .
